--- a/Lazy2/Lazy2/Classes/Scenes/ViewController/LoginViewController.xib
+++ b/Lazy2/Lazy2/Classes/Scenes/ViewController/LoginViewController.xib
@@ -7,7 +7,11 @@
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController">
+            <connections>
+                <outlet property="view" destination="TGF-G7-qLw" id="AbD-bb-mgG"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="TGF-G7-qLw">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
